# basealtTasks

./: CMakeLists.txt  CMakeLists.txt.user.68ba7e4  graph.cpp  graph.h  graph.txt  main.cpp  randomArrayGeneration.cpp  randomArrayGeneration.h  squaregrid.cpp  squaregrid.h  tasks.cpp  tasks.h
